crates/plotnik-tests/tests/04-emit/bytecode/recursion/captured_nullable_recursive_match_only_definition.txt
A = (parenthesized_expression (A)?)
Q = (expression_statement (A) @x)
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:2:27
  |
1 | A = (parenthesized_expression (A)?)
  |     ------------------------------- defined here
2 | Q = (expression_statement (A) @x)
  |                           ^^^
